[package]
name = "pallet-swaps"
version = "0.1.0"
authors = ["Logan Saether <x@logansaether.com>"]
edition = "2018"

[dependencies]
codec = { version = '1.3.4', default-features = false, features = ['derive'], package = 'parity-scale-codec' }
safe-mix = { version = '1.0.0', default-features = false }

pallet-balances = { version = '2.0.0', default-features = false, path = '../balances' }
pallet-fungible = { default-features = false, path = './fungible' }
frame-support = { version = '2.0.0', default-features = false, path = '../support' }
sp-runtime = { version = '2.0.0', default-features = false, path = '../../primitives/runtime' }
frame-system = { version = '2.0.0', default-features = false, path = '../system' }

[dev-dependencies]
sp-core = { version = '2.0.0', default-features = false, path = '../../primitives/core' }
sp-io = { version = '2.0.0', default-features = false, path = '../../primitives/io' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'safe-mix/std',
    'frame-system/std',
    'sp-runtime/std',
    'pallet-balances/std'
]
